--- a/socket/package.json
+++ b/socket/package.json
@@ -1,3 +1,13 @@
 {
-  "type": "module"
+  "name": "rahoot-socket-server",
+  "version": "1.0.0",
+  "description": "WebSocket server for Rahoot quiz app",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "socket.io": "^4.7.4"
+  }
 }
