--- a/socket/package.json
+++ b/socket/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "rahoot-socket-server",
-  "version": "1.0.0",
-  "description": "WebSocket server for Rahoot quiz app",
   "type": "module",
+  "name": "adhyayan-socket-server",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "socket.io": "^4.7.4"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
