--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0"
